# ubcv

./: .gitmodules  CMakeLists.txt  CMakePresets.json
Modules/: Findlarcv.cmake  Findlarlite.cmake  Findublarcvapp.cmake
test/test_fcl/: CMakeLists.txt  test_fcl_ubcv.sh
ubcv/: CMakeLists.txt
ubcv/LArCVImageMaker/: CMakeLists.txt  FMWKInterface.cxx  FMWKInterface.h  ImageMetaFromConfig.cxx  Instance2Image.cxx  Instance2Image.h  LAr2Image.cxx  LAr2Image.h  LArCVBackTracker.cxx  LArCVBackTracker.h  LArCVMetaMaker.cc  LArCVMetaMaker.h  LArCVMetaMaker_service.cc  LArCVSuperaDriver.cxx  LArCVSuperaDriver.h  LArCVWCThrumuImage.cxx  LArCVWCThrumuImage.h  LArFlowLAr2Image.cxx  LArFlowLAr2Image.h  LArPIDInterface.cxx  LArPIDInterface.h  LArPIDInterfaceTest_module.cc  LArPIDInterface_module.cc  LArSoftSuperaSriver_module.cc  LinkDef.h  MCParticleTree.h  MCROIMaker.cxx  MCROIMaker.h  PulledPork3DSlicer.cxx  RSEFilter_module.cc  SSNetHitProducer_module.cc  SuperaBase.cxx  SuperaBase.h  SuperaChStatus.cxx  SuperaChStatus.h  SuperaHit.cxx  SuperaInstanceImage.cxx  SuperaInstanceImage.h  SuperaKeyPointCluster.cxx  SuperaKeyPointCluster.h  (+23 more)
ubcv/LArCVImageMaker/example_drivers/: dlmc_bnb_nu_larlite_supera.fcl  example_driver_larflow.fcl  supera_mctruth_w_wcthrumu.fcl
ubcv/LArCVImageMaker/mcc10_prod_scripts/: copy_nonartroot_lantern.fcl  define_metadata_lantern.fcl  dlprod_fclbase_analyzers_gen2.fcl  launch_lantern_container_data.sh  launch_lantern_container_data_unified.sh  launch_lantern_container_data_unified_altLArPIDWeights.sh  launch_lantern_container_mc.sh  launch_lantern_container_mc_altLArPIDWeights.sh  launch_lantern_container_mc_unified.sh  launch_lantern_container_mc_unified_altLArPIDWeights.sh  mcc10_dlreco_w_wirecell_driver_data_double_pmt_lantern.fcl  mcc10_dlreco_w_wirecell_driver_data_gen2.fcl  mcc10_dlreco_w_wirecell_driver_data_lantern.fcl  mcc10_dlreco_w_wirecell_driver_data_run1ab_lantern.fcl  mcc10_dlreco_w_wirecell_driver_mc_lantern.fcl  mcc10_dlreco_w_wirecell_driver_overlay_and_mc_gen2.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set1.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set1_detsys_wiremod.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set2.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set3.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set4.fcl  mcc10_dlreco_w_wirecell_driver_overlay_lantern_set5.fcl  merge_dlreco_fnal_data_gen2.sh  merge_dlreco_fnal_data_lantern.sh  merge_dlreco_fnal_overlay_and_mc_gen2.sh  merge_dlreco_fnal_overlay_and_mc_lantern.sh  merge_dlreco_fnal_overlay_and_mc_lantern_multiStage.sh  run_lantern_workflow_data.sh  run_lantern_workflow_data_altLArPIDWeights.sh  run_lantern_workflow_mc.sh  run_lantern_workflow_mc_altLArPIDWeights.sh  supera_data_w_wcthrumu.fcl  supera_data_w_wcthrumu_wiremod.fcl  supera_mctruth_set2.fcl  supera_mctruth_set3.fcl  supera_mctruth_set4.fcl  supera_mctruth_set5.fcl
ubcv/LArCVImageMaker/test_scripts/: README.md  compare_ancestor.py  compare_instance.py  compare_larflow.py  compare_segment.py  mcc10_dlreco_larcv_imagemaker_only.fcl  supera_mctruth_set2.fcl  supera_mctruth_set3.fcl  supera_mctruth_set5_larflow_compress.fcl
ubcv/dllee/: CMakeLists.txt  DLLEEInterface_module.cc  example_dllee_driver.fcl  supera_dllee_interface.fcl
ubcv/dllee/cfg/: prod_fullchain_ssnet_combined_newtag_base_c10_union_server.cfg  prod_fullchain_ssnet_combined_ubcv_base_c10_union_server.cfg  tagger_overlay_v2_splity.cfg  tracker.cfg
ubcv/ubdldata/: CMakeLists.txt  classes.h  classes_def.xml  pixeldata.cxx  pixeldata.h
ubcv/ubdlintegration/: CMakeLists.txt  DLInterface_module.cc  README.md  dl_driver.fcl  dl_driver_dev_data.fcl  dl_driver_overlay.fcl  dlreco2.fcl  example_project.xml  init.sh  mcc9_dlreco_driver_data.fcl  mcc9_dlreco_driver_overlay_and_mc.fcl  microboone_ubdl_module.fcl  rundlreco.sh  rundlreco_ssnetvertexonly_bnb.sh  rundlreco_ssnetvertexonly_ext.sh  rundlreco_ssnetvertexonly_fullmc.sh  rundlreco_ssnetvertexonly_mcoverlay.sh  standard_dlreco_uboone_metadata.fcl  submit_ssnet.xml
ubcv/ubdlintegration/fcl/: CMakeLists.txt  README.md  crt_merge_extra_v06_26_01_13_dlrename.fcl  crt_merge_extra_v06_26_01_26_dlrename.fcl  dlreco2.fcl  mcc9_dlreco_driver_data.fcl  mcc9_dlreco_w_wirecell_driver_data.fcl  mcc9_dlreco_w_wirecell_driver_data_run3F.fcl  mcc9_dlreco_w_wirecell_driver_data_run3F_postmerger.fcl  mcc9_dlreco_w_wirecell_driver_overlay_and_mc.fcl  reco_uboone_mcc9_8_driver_overlay_optical_dlrerun.fcl  standard_overlay_notpc_uboone_dlrerun.fcl  standard_overlay_optical_uboone_dlrerun.fcl  wirecell_detsim_optical_overlay_uboone_dlrerun.fcl
ubcv/ubdlintegration/production_dlreco_scripts/: rundlreco_ssnetvertexonly_bnb.sh  rundlreco_ssnetvertexonly_ext.sh  rundlreco_ssnetvertexonly_fullmc.sh  rundlreco_ssnetvertexonly_mcoverlay.sh  rundlreco_wctagger_fnal_data.sh  rundlreco_wctagger_fnal_mc.sh
ubcv/ubdlintegration/production_wiremod/: mcc9_dlreco_w_wirecell_driver_overlay_and_mc_wiremod.fcl  rundlreco_wctagger_fnal_mc_wiremod.sh  supera_mctruthonly_wiremod.fcl
ubcv/ubdlintegration/production_xml/: projectxml_mcc9_bnb_overlay_mc_run3G.xml  projectxml_mcc9_bnb_overlay_mc_run3G_local.xml  projectxml_mcc9_bnbdata_run3G.xml  projectxml_mcc9_bnbdata_run3G_local.xml  projectxml_mcc9_extbnb_run3G_local.xml  projectxml_mcc9_nueintrinsics_overlay_mc_run3G.xml  projectxml_mcc9_wc_bnb_overlay_mc_run3.xml  projectxml_mcc9_wc_bnb_overlay_mc_run3_local.xml  projectxml_mcc9_wc_bnbdata_run3.xml  projectxml_mcc9_wc_bnbdata_run3G_local.xml  projectxml_mcc9_wc_bnbdata_run3_local.xml
ubcv/ubdlintegration/test_dlreco/: README.md  rundlreco_ssnetvertexonly.sh
ubcv/ubdlintegration/test_grid/: cleanup.sh  emptycheck.py  project_test_ssnet_cpumode.xml  rundlreco_bnb.sh  rundlreco_ext.sh  rundlreco_ssnetvertexonly.sh  rundlreco_ssnetvertexonly_bnb.sh  rundlreco_ssnetvertexonly_ext.sh
ubcv/ubdlintegration/wctagger/: dl_driver_wctagger_data.fcl  dl_driver_wctagger_mc_wsimch.fcl  dl_driver_wctagger_wsimch.fcl  init.sh  (+7 more)
ups/: product_deps
(+3 files in other folders)
